# google_test_compiles

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: googletest.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
